--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,7 @@
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia7.jpg" alt="Seventh slide">
+                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia7.JPG" alt="Seventh slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
@@ -2142,19 +2142,19 @@
                                             </ol>
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon1.jpg" alt="First slide">
+                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon1.JPG" alt="First slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Simon the Betafish</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon3.jpg" alt="Third slide">
+                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon3.JPG" alt="Third slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Simon the Betafish</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon4.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/simon4.JPG" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Simon the Betafish</h5>
                                                     </div>
