--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        Born and raised in St. John's Newfoundland, the 
+                                        Born and raised in St. John's Newfoundland, the
                                         farthest East you can go in North America before
                                         England.
                                     </p>
@@ -302,9 +302,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        When I was 6, my Dad was one of the first people in our area to get a computer for his work - 
+                                        When I was 6, my Dad was one of the first people in our area to get a computer for his work -
                                         a glorious Commodore64. I spent hundreds of hours learning how to program in C
-                                        from my dad's books (and more hours playing 
+                                        from my dad's books (and more hours playing
                                         <a href="https://www.youtube.com/watch?v=1LLOfypYTZE" target="_blank">Maniac Mansion cartridge</a>)
                                     </p>
                                 </div>
@@ -342,7 +342,7 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        I initially went to university to study <a href="https://en.wikipedia.org/wiki/Outbreak_(film)" target="_blank">virology</a>, 
+                                        I initially went to university to study <a href="https://en.wikipedia.org/wiki/Outbreak_(film)" target="_blank">virology</a>,
                                         but that didn't pan out. So I fell back on my interests - computers and programming.
                                     </p>
                                 </div>
@@ -361,9 +361,9 @@
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">
-                                        The .com bubble burst in Newfoundland, hard to come by IT jobs. 
-                                        Upon a whim, I decided to move to Ottawa. I packed my drums with my clothes, 
-                                        and my car with my drums, and set off. 
+                                        The .com bubble burst in Newfoundland, hard to come by IT jobs.
+                                        Upon a whim, I decided to move to Ottawa. I packed my drums with my clothes,
+                                        and my car with my drums, and set off.
                                     </p>
                                 </div>
                             </div>
@@ -1657,7 +1657,7 @@
                                     Two Wheels
                                 </div>
 
-                  
+
                             </a>
                         </li>
                         <li>
@@ -2393,7 +2393,7 @@
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3>Let's Do Some Cool Shit Together</h3>
+                    <h3>Let's Do Some Shit Together</h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <i class="fas fa-window-close"></i>
                     </button>
@@ -2403,13 +2403,13 @@
 
                         <div class="row">
                             <div class="col-lg-8 mx-auto">
-                                <h2 class="display-4">Hello Sanja!</h2>
+                                <h2 class="display-4">Hello Tasha!</h2>
 
                                 <p class="lead">
 
-                                    I saw this
-                                    <a href="https://www.shopify.ca/careers/software-developer-lead-international-growth-2e8d14" target="_blank">
-                                        job posting at Shopify
+                                    I saw
+                                    <a href="https://www.shopify.ca/careers/lead-software-developer-international-growth-c81cea" target="_blank">
+                                        this job posting at Shopify
                                     </a> that really spoke to me,
                                     and I think I would be a great fit.
                                 </p>
@@ -2426,9 +2426,10 @@
                                 <p>
                                     I felt like <i>just</i> sending my resum&eacute; is boring, and
                                     the description for
-                                    <strong><a href="https://www.shopify.ca/careers/software-developer-lead-international-growth-2e8d14" target="_blank">Software Developer Lead - International Growth</a></strong>
+                                    <strong><a href="https://www.shopify.ca/careers/lead-software-developer-international-growth-c81cea" target="_blank">Lead Software Developer - International Growth</a></strong>
                                     definitely DOES NOT sound boring!
-                                    So I put together this website to better introduce myself. After spending the last few days working
+                                    So I built this website (from scratch) to better introduce myself.
+                                    After spending the last few days working
                                     on it, I kinda like it. So I'll probably keep it.
                                 </p>
                                 <p>
@@ -2437,6 +2438,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-4 text-center">
+
                                             <span class="fa-stack fa-2x">
                                                 <i class="fa fa-circle fa-stack-2x icon-background shopify-green"></i>
                                                 <i class="fas fa-code fa-stack-1x text-white"></i>
@@ -2459,7 +2461,7 @@
                                                 <i class="fas fa-drafting-compass fa-stack-1x text-white"></i>
                                             </span>
                                             <p>
-                                                Currently <strong>Solution Architect</strong> at <a href="http://www.cihr-irsc.gc.ca/" target="_blank">CIHR</a>
+                                                Currently <strong>Solution Architect</strong> at <b><a href="http://www.cihr-irsc.gc.ca/" target="_blank">CIHR</a></b>
                                             </p>
                                         </div>
                                     </div>
@@ -2495,17 +2497,17 @@
                                 </div>
                                 <hr />
                                 <p>
-                                    I would describe myself "T shaped": having very broad skills with a deep concentration in web 
+                                    I would describe myself "T shaped": having very broad skills with a deep concentration in web
                                     development, architectures and design practices.
                                 </p>
                                 <p>
-                                    My last large project was building the applicant portal for the Canada Council for the Arts 
+                                    My last large project was building a <b>multi-lingual</b> applicant portal for the Canada Council for the Arts
                                     (front-end, back-end, database, design);
-                                    you can check out that project <a href="https://apply.canadacouncil.ca" target="_blank">here</a>.
-                                    I also recently started <a href="https://xerotalent-co.myshopify.com/" target="_blank">my own Shopify store</a>
+                                    you can check out that project <b><a href="https://apply.canadacouncil.ca" target="_blank">here</a></b>.
+                                    I also recently started <b><a href="https://xerotalent-co.myshopify.com/" target="_blank">my own Shopify store</a></b>
                                     (though it's not live yet).
                                 </p>
-                       
+
                                 <p>
                                     Feel free to look around and get to know me a little better.
                                     If you and your team think I might be a good fit, please feel free to reach out!
@@ -2563,7 +2565,7 @@
                                 </p>
                                 <p class="text-center">
                                     <div class="team-member-shopify" style="text-align: center!important;">
-                                        <img class="mx-auto rounded-circle" src="img/me1.jpg" alt="Chris Gamberg">
+                                        <img class="mx-auto rounded-circle" src="img/me2.jpg" alt="Chris Gamberg">
                                         <h4 class="text-muted">Chris Gamberg</h4>
                                     </div>
                                 </p>
