Minor markup errors
Fixed a few markup bugs

--- a/index.html
+++ b/index.html
@@ -741,97 +741,97 @@
                                             </ol>
                                             <div class="carousel-inner">
                                                 <div class="carousel-item active">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_1.jpg" alt="First slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_1.jpg" alt="First slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Scotiabank Stadium (Tom Cochrane)</h5>
                                                         <p>Ottawa ON | October 2012</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_2.jpg" alt="Third slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_2.jpg" alt="Third slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Scotiabank Stadium (Tom Cochrane)</h5>
                                                         <p>Ottawa ON | October 2012</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_3.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_3.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode @ Greenfields</h5>
                                                         <p>Ottawa ON | January 2015</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_4.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_4.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode @ Obsession</h5>
                                                         <p>Ottawa ON | August 2013</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_5.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_5.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Home Studio</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_6.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_6.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>RDP Album Recording <i>(An Endless Display)</i></h5>
                                                         <p>July 1998</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_7.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_7.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>RDP</h5>
                                                         <p>September 1999</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_8.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_8.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode</h5>
                                                         <p>November 2013</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_9.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_9.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode @ Greenfields</h5>
                                                         <p>February 2013</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_10.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_10.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode @ Greenfields</h5>
                                                         <p>February 2013</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_11.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_11.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Scotiabank Stadium (Tom Cochrane)</h5>
                                                         <p>Ottawa ON | October 2012</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_12.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_12.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Scotiabank Stadium (Tom Cochrane)</h5>
                                                         <p>Ottawa ON | October 2012</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_13.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_13.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Scotiabank Stadium (Tom Cochrane)</h5>
                                                         <p>Ottawa ON | October 2012</p>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/music/music_14.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/music/music_14.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>KarmaCode @ Greenfields</h5>
                                                         <p>February 2017</p>
@@ -891,11 +891,11 @@
                                                             <li>14"x5" Yamaha Custom Snare (Birch)</li>
                                                         </ul>
                                                         <strong>Drum Heads</strong><br />
-                                                        <sul>
+                                                        <ul>
                                                             <li>Remo Coated Emperor Dot (Snare)</li>
                                                             <li>Remo Clear Dot (Toms)</li>
                                                             <li>Aquarian SuperKick (Kick)</li>
-                                                        </sul>
+                                                        </ul>
                                                     </div>
                                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                                         <strong>Cymbals:</strong>
