Minor markup fixes
Fixes to markup

--- a/index.html
+++ b/index.html
@@ -2071,37 +2071,37 @@
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " style="width: 725px !important;" src="img/portfolio/animals/mia2.gif" alt="Second slide">
+                                                    <img class="d-block w-100 img-fluid" style="width: 725px !important;" src="img/portfolio/animals/mia2.gif" alt="Second slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia3.jpg" alt="Third slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/animals/mia3.jpg" alt="Third slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia4.jpg" alt="Fourth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/animals/mia4.jpg" alt="Fourth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia5.jpg" alt="Fifth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/animals/mia5.jpg" alt="Fifth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia6.jpg" alt="Sixth slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/animals/mia6.jpg" alt="Sixth slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img class="d-block w-100 img-fluid" " src="img/portfolio/animals/mia7.JPG" alt="Seventh slide">
+                                                    <img class="d-block w-100 img-fluid" src="img/portfolio/animals/mia7.JPG" alt="Seventh slide">
                                                     <div class="carousel-caption d-none d-md-block">
                                                         <h5>Mia the Beagle</h5>
                                                     </div>
